--- a/python_client.html
+++ b/python_client.html
@@ -282,7 +282,7 @@
             document.getElementById('chatScreen').style.display = 'block';
             
             // Connect to WebSocket
-            connectWebSocket('ws://localhost:8765');
+            connectWebSocket('wss://https://chatting-app-1-4npp.onrender.com/');
         }
 
         function connectWebSocket(serverAddress) {
@@ -533,4 +533,5 @@
         }
     </script>
 </body>
+
 </html>
