--- a/python_client.html
+++ b/python_client.html
@@ -282,7 +282,7 @@
             document.getElementById('chatScreen').style.display = 'block';
             
             // Connect to WebSocket
-            connectWebSocket('wss://https://chatting-app-1-4npp.onrender.com/');
+            connectWebSocket('wss://https://chatting-9qbc.onrender.com');
         }
 
         function connectWebSocket(serverAddress) {
@@ -535,3 +535,4 @@
 </body>
 
 </html>
+
